tests/sumo/output/vtypeprobe/errors/file_false/errors.sumo
Error: Could not build output file 'xxx/vtypeprobe.xml' (No such file or directory).
Quitting (on error).
